Corrige l'intitulé sujet résolu

--- a/templates/forum/topic/index.html
+++ b/templates/forum/topic/index.html
@@ -44,8 +44,7 @@
     <div class="content-wrapper">
         {% if topic.is_solved %}
             <div class="alert-box success">
-                <strong>Ce sujet est résolu</strong>, l'auteur de ce sujet a trouvé une
-                solution satisfaisant son problème.
+                L'auteur de ce sujet a trouvé une solution à son problème.
             </div>
         {% endif %}
 
