--- a/templates/tutorial/validation/index.html
+++ b/templates/tutorial/validation/index.html
@@ -52,7 +52,7 @@
                                 </td>
                                 <td>
                                     {% for author in validation.tutorial.authors.all %}
-                                        <a href="{% url "zds.member.views.details" user.username %}">{{ author.username }}</a>
+                                        {% include 'misc/member_item.part.html' with member=author avatar=True %}
                                     {% endfor %}
                                 </td>
                                 <td>
@@ -60,7 +60,7 @@
                                 </td>
                                 <td>
                                     {% if validation.validator %}
-                                        <a href="{% url "zds.member.views.details" validation.validator.username %}">{{ validation.validator.username }}</a>
+                                        {% include 'misc/member_item.part.html' with member=validation.validator avatar=True %}
                                     {% endif %}
                                 </td>
                                 <td>
