--- a/templates/base.html
+++ b/templates/base.html
@@ -214,10 +214,10 @@
                                             <span class="dropdown-title">Messagerie privée</span>
                                             <ul class="dropdown-list">
                                                 {% for topic in unread_topics %}
-                                                    {% with first_unread=topic.first_unread_post  last_answer=topic.get_last_answer %}
+                                                    {% with last_answer=topic.get_last_answer %}
                                                     <li>
-                                                        {% if not last_answer %}
-                                                            {% set topic.first_post as last_answser %}
+                                                        {% if last_answer = None %}
+                                                            {% set topic.last_read_post as last_answer %}
                                                         {% endif %}
                                                         <a href="{{ topic.last_read_post.get_absolute_url }}">
                                                             {% with p=last_answer.author|profile %}
