--- a/templates/mp/topic/index.html
+++ b/templates/mp/topic/index.html
@@ -96,7 +96,7 @@
                     </a>
                     <form action="{% url "zds.mp.views.add_participant" %}" mathod="post" id="add-participant" class="modal modal-medium">
                         <p>
-                            Vous allez rajouter un nouveau membre dans la conversation privé.
+                            Vous allez rajouter un nouveau membre dans la conversation privée.
                         </p>
                         <input type="hidden" name="topic_pk" value="{{ topic.pk }}">
                         <input type="text" class="input" name="user_pk" placeholder="Pseudo du membre">
