Ajout accent 'apprêtez'

--- a/templates/mp/topic/index.html
+++ b/templates/mp/topic/index.html
@@ -113,7 +113,7 @@
                 </a>
                 <form action="{% url "zds.mp.views.leave" %}" mathod="post" id="leave-conversation" class="modal modal-small">
                     <p>
-                        Attention, vous vous appretez à quitter définitivement cette conversation.
+                        Attention, vous vous apprêtez à quitter définitivement cette conversation.
                     </p>
                     <input type="hidden" name="topic_pk" value="{{ topic.pk }}">
 
