Corrige la page catégorie forum

--- a/templates/forum/category/index.html
+++ b/templates/forum/category/index.html
@@ -21,7 +21,7 @@
 
 
 {% block content %}
-	<div class="content-wrapper topic-list forum-list navigable-list">
+	<div class="content-wrapper topic-list topic-list-small forum-list navigable-list">
 	    {% include "forum/includes/forums.part.html" %}
 	</div>
 {% endblock %}
