--- a/assets/scss/_all-supports.scss
+++ b/assets/scss/_all-supports.scss
@@ -1754,12 +1754,30 @@ table {
 .topic-message {
     position: relative;
 
+    &.repeated {
+        .message {
+            background-color: #EEE;
+
+            &:after {
+                border-right-color: #EEE;
+            }
+        }
+    }
     &.helpful {
         .message {
             background-color: $helpful;
 
             &:after {
                 border-right-color: $helpful;
+            }
+        }
+        &.repeated {
+            .message {
+                background-color: desaturate($helpful, 50%);
+
+                &:after {
+                    border-right-color: desaturate($helpful, 50%);
+                }
             }
         }
     }
@@ -1913,7 +1931,8 @@ table {
 
             .message-edited,
             .message-hidden,
-            .message-helpful {
+            .message-helpful,
+            .message-repeated {
                 padding: 3px 0 0;
 
                 &.ico-after {
@@ -1925,7 +1944,8 @@ table {
                 }
             }
             .message-edited,
-            .message-hidden {
+            .message-hidden,
+            .message-repeated {
                 font-style: italic;
                 color: #999;
 
