Liste tutos -> Mes tutos

--- a/templates/tutorial/member/index.html
+++ b/templates/tutorial/member/index.html
@@ -4,19 +4,19 @@
 
 
 {% block title %}
-    Liste des tutoriels
+    Mes tutoriels
 {% endblock %}
 
 
 
 {% block breadcrumb %}
-    <li>Liste des tutoriels</a>
+    Mes tutoriels</a>
 {% endblock %}
 
 
 
 {% block headline %}
-    <h2>Liste des tutoriels</h2>
+    Mes tutoriels</h2>
 {% endblock %}
 
 
