--- a/templates/mp/index.html
+++ b/templates/mp/index.html
@@ -27,7 +27,7 @@
         {% for topic in privatetopics %}
             <div class="topic {% if topic.never_read %}unread{% endif %} navigable-elem">
                 <div class="topic-infos">
-                    <input name="items" type="checkbox" value="{{ topic.pk }}">
+                    <input name="items" type="checkbox" value="{{ topic.pk }}" form="delete-conversations">
                 </div>
                 {% with profile=topic.author|profile %}
                     <div class="topic-description">
@@ -87,7 +87,7 @@
                     Supprimer les conversations sélectionnées
                 </a>
                 
-                <form action="{% url "zds.mp.views.index" %}" method="POST" id="delete-conversations" class="modal modal-small">
+                <form action="{% url "zds.mp.views.index" %}" method="post" id="delete-conversations" class="modal modal-small">
                     <p>
                         Attention, vous vous appretez à supprimer toutes les conversations sélectionnées.
                     </p>
