Marge gauche sur petits écrans

--- a/assets/scss/_wide.scss
+++ b/assets/scss/_wide.scss
@@ -395,11 +395,9 @@
     /* ==============
         Main / Content Wrappers
        ============== */
-    .content-wrapper {
-        margin: 0 0 0 1.5%;
-    }
+    .content-wrapper,
     .full-content-wrapper {
-        margin: 0 0 0 2%;
+        margin: 0 0 0 4%;
     }
 
 
