--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -83,6 +83,7 @@ $font-monospace-active: "Source Code Pro", $font-monospace;
 @import "tablet";
 @import "wide";
 @import "extra-wide";
+@import "mega-wide";
 
 // Retina-like support
 @import "high-pixel-ratio";
