--- a/templates/mp/index.html
+++ b/templates/mp/index.html
@@ -23,7 +23,7 @@
 
 
 {% block content %}
-    <div class="topic-list content-wrapper navigable-list">
+    <div class="topic-list navigable-list">
         {% for topic in privatetopics %}
             <div class="topic {% if topic.never_read %}unread{% endif %} navigable-elem">
                 <div class="topic-infos">
