--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -34,6 +34,9 @@ $helpful: #e9f9dc;
 $sidebar-background: #F0F0F0;
 $sidebar-hover: #FFF;
 
+$upvote-green: #48a200;
+$downvote-red: #c0392b;
+
 // Margins
 $modal-margin: 25px;
 
