--- a/assets/scss/_mobile-tablet.scss
+++ b/assets/scss/_mobile-tablet.scss
@@ -502,9 +502,22 @@
                     top: 35px;
                     left: 10px;
 
-                    a {
+                    a,
+                    span {
                         margin-right: 1px;
                         margin-left: 0;
+                        border-bottom-width: 1px !important;
+
+                        &.has-vote {
+                            text-indent: 15px;
+                            line-height: 14px;
+                            font-size: 12px;
+                            text-align: right;
+
+                            &.downvote {
+                                line-height: 40px;
+                            }
+                        }
                     }
 
                     .tick {
