--- a/assets/scss/_all-supports.scss
+++ b/assets/scss/_all-supports.scss
@@ -1998,6 +1998,7 @@ table {
 
                 a {
                     border-bottom-width: 3px;
+                    border-bottom-color: transparent;
                 }
 
                 .tick {
