--- a/templates/misc/message.part.html
+++ b/templates/misc/message.part.html
@@ -207,7 +207,7 @@
                                     <a href="{{ downvote_link }}" 
                                        title="Ce message n'est pas utile"
                                        class="downvote {% if message.like < message.dislike %}more-voted{% endif %} ico-after
-                                              {% if message.like > 0 %}has-vote{% endif %}
+                                              {% if message.dislike > 0 %}has-vote{% endif %}
                                               {% if profile_user|disliked:message.pk %}voted{% endif %}"
                                     >
                                         {% if message.dislike > 0 %}
