--- a/assets/scss/_mobile.scss
+++ b/assets/scss/_mobile.scss
@@ -60,6 +60,24 @@
                 left: 12px !important;
             }
         }
+        .message-karma {
+            a,
+            span {
+                margin-right: 1px;
+                margin-left: 0;
+
+                &.has-vote {
+                    text-indent: 15px;
+                    line-height: 14px;
+                    font-size: 12px;
+                    text-align: right;
+
+                    &.downvote {
+                        line-height: 40px;
+                    }
+                }
+            }
+        }
         .message-submit {
             display: block !important;
             width: calc(100% - 16px);
