--- a/assets/scss/_mobile-tablet.scss
+++ b/assets/scss/_mobile-tablet.scss
@@ -552,9 +552,14 @@
             h6,
             .subtitle,
             .authors,
-            p {
-                padding-left: 15px;
-                padding-right: 15px;
+            p,
+            figure {
+                margin-left: 15px;
+                margin-right: 15px;
+            }
+            figure p {
+                margin-left: 0;
+                margin-right: 0;
             }
         }
     }
