Changé le font-size de <mathjax> à 1.6em

--- a/assets/scss/_all-supports.scss
+++ b/assets/scss/_all-supports.scss
@@ -1685,6 +1685,10 @@
             text-shadow: 0 1px 0 #FFF;
             color: darken($kbd-color, 70%);
         }
+
+        mathjax {
+            font-size: 1.6em;
+        }
     }
 
     .reactions-title {
