--- a/assets/scss/_all-supports.scss
+++ b/assets/scss/_all-supports.scss
@@ -1687,7 +1687,8 @@
         }
 
         mathjax {
-            font-size: 1.6em;
+            font-size: 22px;
+            font-size: 2.2rem;
         }
     }
 
