Contenu sur mobile opti

--- a/assets/scss/_all-supports.scss
+++ b/assets/scss/_all-supports.scss
@@ -1478,6 +1478,7 @@
     .article-content,
     .message-content {
         margin-top: 20px;
+        margin-bottom: 20px;
         color: #424242;
 
         h2,
