--- a/assets/scss/_mobile-tablet.scss
+++ b/assets/scss/_mobile-tablet.scss
@@ -482,6 +482,10 @@
                 height: 30px;
                 line-height: 30px;
 
+                .username {
+                    margin-left: 5px;
+                }
+
                 .date {
                     float: right;
                 }
@@ -553,13 +557,17 @@
             .subtitle,
             .authors,
             p,
-            figure {
+            figure,
+            blockquote {
                 margin-left: 15px;
                 margin-right: 15px;
             }
-            figure p {
-                margin-left: 0;
-                margin-right: 0;
+            figure {
+                p,
+                blockquote {
+                    margin-left: 0;
+                    margin-right: 0;
+                }
             }
         }
     }
